--- a/index.css
+++ b/index.css
@@ -12,4 +12,28 @@
 
   .smaller-text {
     font-size: 1.2rem; /* Adjust as needed */
+  }
+
+    
+  .button-link {
+  display: inline-block;
+  background-color: #007BFF; /* flot blå */
+  color: white;
+  padding: 12px 24px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  }
+
+
+.button-link:hover {
+  background-color: #0056b3;
+  transform: translateY(-2px);
 }
+
+
+
+
+
